# nzbget

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChangeLog.md  INSTALLATION.md  Makefile.am  Makefile.in  README  README.md  SECURITY.md  SETUP.md  aclocal.m4  cmake_config.h.in  code_revision.cpp  code_revision.sh  config.h.in  configure  configure.ac  nzbget.conf  nzbget.vcxproj  pubkey.pem  test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_build.yml  04_extension.yml  bug_report.md  config.yml  feature_request.md
.github/workflows/: android.yml  build.yml  docker-debug.yml  docker.yml  flatpak.yml  freebsd.yml  linux-pkg.yml  linux.yml  osx.yml  posix-tests.yml  qnap-repack.yml  qnap.yml  release.yml  snap.yml  synology.yml  test-windows.yml  tests.yml  windows-tests.yml  windows.yml
cmake/: android.cmake  boost.cmake  common.cmake  config.cmake  config.h.in  install.cmake  par2-turbo.cmake  par2.cmake  posix.cmake  rapidyenc.cmake  toolchain.cmake  windows.cmake  yenc.cmake
daemon/: CMakeLists.txt  sources.cmake  src.cmake
daemon/connect/: Connection.cpp  Connection.h  HttpClient.cpp  HttpClient.h  NetworkSpeedTest.cpp  NetworkSpeedTest.h  TlsSocket.cpp  TlsSocket.h  WebDownloader.cpp  WebDownloader.h
daemon/extension/: CommandScript.cpp  CommandScript.h  Extension.cpp  Extension.h  ExtensionLoader.cpp  ExtensionLoader.h  ExtensionManager.cpp  ExtensionManager.h  FeedScript.cpp  FeedScript.h  LoadScriptFileStrategy.cpp  LoadScriptFileStrategy.h  ManifestFile.cpp  ManifestFile.h  NzbScript.cpp  NzbScript.h  PostScript.cpp  PostScript.h  QueueScript.cpp  (+9 more)
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: ANDROID.md  CONTRIBUTING.md  EXTENSIONS.md  EXTENSIONS_LEGACY.md  FINDING_BEST_TLS_CIPHER.md  FUNCTIONAL_TESTING.md  HOW_TO_USE.md  NSERV.md  PERFORMANCE.md  POSIX.md  SYNOLOGY.md  UNPACKING.md  WEBUI.md  WINDOWS.md
lib/: CMakeLists.txt  sources.cmake
lib/par2/: creatorpacket.cpp  diskfile.cpp  par2cmdline.h  reedsolomon.h
lib/regex/: regex.c  regex.h
lib/yencode/: ScalarDecoder.cpp  SimdDecoder.cpp  SimdInit.cpp  Sse2Decoder.cpp  Ssse3Decoder.cpp  YEncode.h
linux/: build-info.md  build-nzbget  build-nzbget.sh  build-toolchain-android  build-toolchain-freebsd  build-unpack  install-update.sh  installer.sh  package-info.json
osx/: App_Prefix.pch  DaemonController.h  DaemonController.m  MainApp.h  MainApp.m  NZBGet-Info.plist  PreferencesDialog.h  PreferencesDialog.m  RPC.h  RPC.m  WebClient.h  WebClient.m  WelcomeDialog.h  WelcomeDialog.m  brew-info.md  build-info.md  build-nzbget-universal.sh  build-nzbget-x64.sh  build-nzbget.sh
posix/: ax_boost_json.m4
qnap/: README.md  build-info.md  build-nzbget.sh  repack-info.md  repack-nzbget.sh
scripts/: EMail.py  Logger.py
synology/: README.md  build-info.md  build-nzbget.sh
tests/: CMakeLists.txt  main.cpp
tests/extension/: CMakeLists.txt  Extension.cpp  ExtensionLoader.cpp  ExtensionLoaderTest.cpp  ExtensionManager.cpp  ExtensionManagerTest.cpp  ExtensionTest.cpp  ManifestFile.cpp  ManifestFileTest.cpp  ScanScript.cpp  ScanScriptTest.cpp  extension.cmake  main.cpp
tests/feed/: CMakeLists.txt  FeedFile.cpp  FeedFileTest.cpp  FeedFilter.cpp  FeedFilterTest.cpp  NzbInfoCreator.cpp  NzbInfoCreatorTest.cpp  feed.cmake  main.cpp
tests/functional/: conftest.py
tests/healthcheck/: CMakeLists.txt  ChecksTest.cpp  main.cpp
tests/main/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParserTest.cpp  Options.cpp  OptionsTest.cpp  main.cmake  main.cpp
tests/nntp/: CMakeLists.txt  Decoder.cpp  DecoderTest.cpp  ServerPool.cpp  ServerPoolTest.cpp  StatMeter.cpp  StatMeterTest.cpp  main.cpp  nntp.cmake
tests/postprocess/: CMakeLists.txt  DirectUnpack.cpp  DirectUnpackTest.cpp  DupeMatcher.cpp  DupeMatcherTest.cpp  ParChecker.cpp  ParCheckerTest.cpp  ParRenamer.cpp  ParRenamerTest.cpp  RarReader.cpp  RarReaderTest.cpp  RarRenamer.cpp  RarRenamerTest.cpp  main.cpp  postprocess.cmake
tests/queue/: CMakeLists.txt  Deobfuscation.cpp  DeobfuscationTest.cpp  NzbFile.cpp  NzbFileTest.cpp  main.cpp  queue.cmake
tests/suite/: TestMain.cpp  TestMain.h  TestUtil.cpp  TestUtil.h
tests/system/: CMakeLists.txt  SystemInfo.cpp  SystemInfoTest.cpp  main.cpp  system.cmake
tests/systemhealth/: CMakeLists.txt  NewsServerValidator.cpp  NewsServerValidatorTest.cpp  PathsValidator.cpp  PathsValidatorTest.cpp  SecurityValidatorTest.cpp  ServiceTest.cpp  Validators.cpp  ValidatorsTest.cpp  main.cpp  systemhealth.cmake
tests/testdata/extension/V1/: Extension.py
tests/testdata/extension/manifest/invalid/: manifest.json
tests/testdata/extension/manifest/valid/: manifest.json
tests/testdata/extension/scripts/: Extension3.py
tests/testdata/extension/scripts/Email/: email.py  manifest.json
tests/testdata/feed/: feed.xml  feed2.xml
tests/testdata/nzbfile/: dotless.nzb  dotless.txt  passwdMeta.nzb  passwdMeta.txt  passwd{{thisisthepassword}}.txt  plain.nzb  plain.txt
tests/testdata/parchecker/: crc.txt  testfile.nfo
tests/testdata/parchecker2/: testfile.7z.001
tests/testdata/parcheckerUtf8/: ä½ å¥½ä¸ç.par2  ä½ å¥½ä¸ç.rar  ä½ å¥½ä¸ç.vol000+128.par2  ä½ å¥½ä¸ç.vol128+071.par2
tests/util/: Benchmark.cpp  BenchmarkTest.cpp  CMakeLists.txt  DataAnalytics.cpp  DataAnalyticsTest.cpp  FileSystem.cpp  FileSystemTest.cpp  Json.cpp  JsonTest.cpp  NString.cpp  NStringTest.cpp  Unpack.cpp  UnpackTest.cpp  Utf8.cpp  Utf8Test.cpp  Util.cpp  UtilTest.cpp  main.cpp  util.cmake
webui/: app-health.js  config.js  dark-theme.css  datetime.js  downloads.js  edit.js  fasttable.js  feed.js  history.js  index.html  index.js  light-theme.css  messages.js  package-info.json  statistics-chart.js  statistics.js  status.js  style.css  system-health.js  system-info.js  upload.js  util.js
windows/: README-WINDOWS.txt  build-info.md  build-nzbget-cmake.ps1  build-nzbget-vs22.bat  build-nzbget.bat  build-nzbget.ps1  nzbget-setup.nsi  package-info.json  pkgs-info.md  version-uninstall.nsi.in  version.nsi.in
(+343 files in other folders)
